@@ -1,5 +1,10 @@
 2004-11-09  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c (logview_copy): Handle multiple lines selection.
+
+	* log_repaint.c (handle_selection_changed_cb): Allow the selection
+	of multiple log lines.
+
 	* logview.c (logview_copy): Add a "copy" menuitem to copy the
 	content of the active log line to the clipboard.
 
